Clean up and removal of double slashes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -550,10 +550,7 @@ process {
             params.aligner == "chromap" ? "--format BAM" : '' //TODO check if not needed anymore with new chromap versions
         ].join(' ').trim()
         publishDir = [
-            path: { [
-                "${params.outdir}/${params.aligner}/merged_library/macs2",
-                params.narrow_peak? '/narrow_peak' : '/broad_peak'
-            ].join('') },
+            path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -562,14 +559,14 @@ process {
     withName: 'FRIP_SCORE' {
         ext.args   = '-bed -c -f 0.20'
         publishDir = [
-            path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
+            path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}/qc" },
             enabled: false
         ]
     }
 
     withName: 'MULTIQC_CUSTOM_PEAKS' {
         publishDir = [
-            path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
+            path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}/qc" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -582,7 +579,7 @@ if (!params.skip_peak_annotation) {
             ext.args   = '-gid'
             ext.prefix = { "${meta.id}_peaks" }
             publishDir = [
-                path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}" },
+                path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}" },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -594,7 +591,7 @@ if (!params.skip_peak_annotation) {
             withName: 'PLOT_MACS2_QC' {
                 ext.args   = '-o ./ -p macs2_peak'
                 publishDir = [
-                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
+                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}/qc" },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
@@ -604,7 +601,7 @@ if (!params.skip_peak_annotation) {
                 ext.args   = '-o ./'
                 ext.prefix = 'macs2_annotatePeaks'
                 publishDir = [
-                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
+                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}/qc" },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
@@ -619,7 +616,7 @@ if (!params.skip_consensus_peaks) {
             ext.when   = { meta.multiple_groups || meta.replicates_exist }
             ext.prefix = { "${meta.id}.consensus_peaks" }
             publishDir = [
-                path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/consensus/${meta.id}" },
+                path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}/consensus/${meta.id}" },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -629,7 +626,7 @@ if (!params.skip_consensus_peaks) {
             ext.args   = '-F SAF -O --fracOverlap 0.2'
             ext.prefix = { "${meta.id}.consensus_peaks" }
             publishDir = [
-                path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/consensus/${meta.id}" },
+                path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}/consensus/${meta.id}" },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -642,7 +639,7 @@ if (!params.skip_consensus_peaks) {
                 ext.args   = '-gid'
                 ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
-                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/consensus/${meta.id}" },
+                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}/consensus/${meta.id}" },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
@@ -651,7 +648,7 @@ if (!params.skip_consensus_peaks) {
             withName: 'ANNOTATE_BOOLEAN_PEAKS' {
                 ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
-                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/consensus/${meta.id}" },
+                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}/consensus/${meta.id}" },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
@@ -671,7 +668,7 @@ if (!params.skip_consensus_peaks) {
                 ].join(' ').trim()
                 ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
-                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/consensus/${meta.id}/deseq2" },
+                    path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}/consensus/${meta.id}/deseq2" },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
@@ -685,7 +682,7 @@ if (!params.skip_igv) {
         withName: 'IGV' {
             publishDir = [
                 [
-                        path: { "${params.outdir}/igv/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}" },
+                        path: { "${params.outdir}/igv/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}" },
                         mode: params.publish_dir_mode,
                         pattern: '*.{txt,xml}'
                 ],
@@ -704,7 +701,7 @@ if (!params.skip_multiqc) {
         withName: 'MULTIQC' {
             ext.args   = params.multiqc_title ? "--title \"$params.multiqc_title\"" : ''
             publishDir = [
-                path: { "${params.outdir}/multiqc/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}" },
+                path: { "${params.outdir}/multiqc/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}" },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
