Pass read group fields to bowtie2

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -225,7 +225,12 @@ if (params.aligner == 'bwa') {
 if (params.aligner == 'bowtie2') {
     process {
         withName: 'BOWTIE2_ALIGN' {
-            ext.args   = ''
+            ext.args   = {
+                [
+                    meta.read_group ? "--rg-id ${meta.id} --rg SM:${meta.id - ~/_T\d+$/} --rg PL:ILLUMINA --rg LB:${meta.id} --rg PU:1" : '',
+                    params.seq_center ? "--rg CN:${params.seq_center}" : ''
+                ].join(' ').trim()
+            }
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 [
