Patch chromap/chromap module to include read group (otherwise picard/markduplicates erroring)

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -262,6 +262,7 @@ if (params.aligner == 'chromap') {
 
         withName: CHROMAP_CHROMAP {
             ext.args   = '-l 2000 --low-mem --SAM'
+            ext.args3  = { meta.read_group ? "-r ${meta.read_group}" : '' }
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
