Fix file publication

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -354,7 +354,8 @@ process {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/merged_library/samtools_stats" },
             mode: params.publish_dir_mode,
-            pattern: '*.{stats,flagstat,idxstats}'
+            pattern: '*.{stats,flagstat,idxstats}',
+            enabled: params.save_align_intermeds
         ]
     }
 
@@ -412,6 +413,24 @@ process {
             mode: params.publish_dir_mode,
             pattern: '*.bam',
             enabled: params.save_align_intermeds
+        ]
+    }
+
+    withName: '.*:BAM_FILTER_BAMTOOLS:BAM_SORT_STATS_SAMTOOLS:.*' {
+        ext.prefix = { "${meta.id}.mLb.clN.sorted" }
+        publishDir = [
+            path: { "${params.outdir}/${params.aligner}/merged_library" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{bam,bai}"
+        ]
+    }
+
+    withName: '.*:BAM_FILTER_BAMTOOLS:BAM_SORT_STATS_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
+        ext.prefix = { "${meta.id}.mLb.clN.sorted.bam" }
+        publishDir = [
+            path: { "${params.outdir}/${params.aligner}/merged_library/samtools_stats" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{stats,flagstat,idxstats}"
         ]
     }
 
@@ -553,7 +572,7 @@ process {
             params.save_macs_pileup     ? '--bdg --SPMR' : '',
             params.macs_fdr             ? "--qvalue ${params.macs_fdr}" : '',
             params.macs_pvalue          ? "--pvalue ${params.macs_pvalue}" : '',
-            params.aligner == "chromap" ? "--format BAM" : '' //TODO check if not needed anymore with new chromap versions
+            params.aligner == "chromap" ? "--format BAM" : ''
         ].join(' ').trim()
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/merged_library/macs3/${params.narrow_peak ? 'narrow_peak' : 'broad_peak'}" },
