--- a/nextflow.config
+++ b/nextflow.config
@@ -291,7 +291,7 @@ manifest {
     description     = """ChIP-seq peak-calling and differential analysis pipeline."""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version         = '2.1.0dev'
+    version         = '2.1.0'
     doi             = ''
 }
 
