--- a/nextflow.config
+++ b/nextflow.config
@@ -292,7 +292,7 @@ manifest {
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
     version         = '2.1.0'
-    doi             = ''
+    doi             = 'https://doi.org/10.5281/zenodo.3240506'
 }
 
 // Load modules.config for DSL2 module specific options
