--- a/conf/test.config
+++ b/conf/test.config
@@ -10,6 +10,7 @@
 ----------------------------------------------------------------------------------------
 */
 
+// Limit resources so that this can run on GitHub Actions
 process {
     resourceLimits = [
         cpus: 4,
